# Memorial-descritivo

./: .gitignore  ARCHITECTURE.md  CHANGELOG_UI.md  CONFIGURACAO_LOGO.md  EXAMPLES.md  INICIO_RAPIDO.md  INSTALL.md  INSTALL_NOTES.md  INTERFACE_QUICKSTART.md  INTERFACE_SUMMARY.md  MIGRATION_NOTES.md  MUDANCAS_LOGO.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  RESUMO_FINAL.md  ROADMAP_QUANTITATIVOS.md  SETUP.md  SIMPLIFICACAO.md  TROUBLESHOOTING.md  UI_GUIDE.md  USAGE.md  add_logo.sh  convert_doc_to_docx.py  env.example  prepare_header_footer_images.py  pyproject.toml  requirements.txt  run_streamlit.sh  setup.sh  start.sh  test_api.py  test_api_detailed.py  test_api_key.py  test_carimbo_debug.py  test_dados_obra_schema.py  test_extraction.py  test_full_extraction.py  test_header_margins.py  (+8 more)
app/: __init__.py  main.py
app/core/: config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  agent_service.py  document_parser.py  pdf_extractor.py
assets/: COMO_ADICIONAR_LOGO.md  README.md  logo_placeholder.txt
context_files/: abnt_rules.txt  client_template.txt
memorial/: MEMO ELÉTRICO_09-01-2026.doc  MEMO ELÉTRICO_09-01-2026.html  MEMO ELÉTRICO_09-01-2026.txt  MEMO TELECOM_03-11-2025.doc  MEMO TELECOM_03-11-2025.docx  MEMORIAL_MGAMAK_2025-11-27(10)(2).docx  MEMORIAL_TELECOM_MGAMAK_2026-01-22.docx  MEMORIAL_TELECOM_MGAMAK_2026-01-23(3).docx  MEMORIAL_TELECOM_MGAMAK_22-01-2026.docx  SEBRAE_PATOS_MEMO TELECOM_17-10-2025.docx  memorial_eletrico.txt
memorial_maker/: __init__.py  cli.py  config.py
memorial_maker/extract/: __init__.py  carimbo.py  docling_extract.py  optimized_extract.py  pdf_fallback.py  tables.py  unstructured_extract.py  verify_parallel.py
memorial_maker/normalize/: __init__.py  canonical_map.py  consolidate.py
memorial_maker/rag/: __init__.py  generate_sections.py  index_style.py  static_templates.py
memorial_maker/rag/prompts/: base_instructions.txt  s1_introducao.txt  s2_dados_obra.txt  s3_normas.txt  s4_1_voz.txt  s4_2_dados.txt  (+7 more)
memorial_maker/utils/: __init__.py  cv_utils.py  io_paths.py  logging.py  ocr_cache.py
memorial_maker/writer/: __init__.py  dados_obra_schema.py  docx_postprocess.py  docx_styles.py  fixed_toc.py  write_docx.py
static/: README.md  index.html
static/css/: style.css
static/js/: app.js
test_output/: MGAMAK_TELECOM_01_SUBSOLO_28-04-2025_unstructured.json  mestre_test.json
tests/: __init__.py  test_smoke.py
ui/: app.py
(+52 files in other folders)
